Functionalities - Added full notifications support Resources - Fixed all missing strings

--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/create_event_constraint_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -36,10 +37,9 @@
         android:layout_marginTop="20dp"
         android:autofillHints=""
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/title_text"
-        android:textSize="17sp"
         android:hint="@string/title_text"
+        android:inputType="textPersonName"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,11 +50,10 @@
         android:layout_width="349dp"
         android:layout_height="37dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:autofillHints=""
-        android:inputType="textPersonName"
-        android:text="@string/where_text"
+        android:ems="10"
         android:hint="@string/where_text"
+        android:inputType="textPersonName"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
@@ -92,11 +91,10 @@
         android:layout_width="338dp"
         android:layout_height="79dp"
         android:layout_marginTop="20dp"
-        android:ems="10"
         android:autofillHints=""
-        android:inputType="textPersonName"
-        android:text="@string/description_text"
+        android:ems="10"
         android:hint="@string/description_text"
+        android:inputType="textPersonName"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.41"
