--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/editprofile_constraint_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -83,7 +84,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="108dp"
                             android:layout_weight="0"
-                            android:text="New Image" />
+                            android:text="@string/new_profile_image" />
                     </LinearLayout>
 
                     <Space
@@ -109,7 +110,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0"
                         android:ems="10"
-                        android:hint="New Description"
+                        android:hint="@string/new_profile_description"
                         android:inputType="textPersonName" />
 
                     <Space
@@ -157,7 +158,7 @@
                                 android:fitsSystemWindows="false"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="Add"
+                                android:text="@string/add_preference"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -173,7 +174,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="Delete"
+                                android:text="@string/delete_preference"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -289,7 +290,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="serif-monospace"
                         android:gravity="center"
-                        android:text="Personal Information"
+                        android:text="@string/profile_personal_information"
                         android:textSize="24sp" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -314,14 +315,13 @@
                             android:id="@+id/btn_changepassword"
                             android:layout_width="140dp"
                             android:layout_height="49dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="40dp"
+                            android:layout_marginLeft="40dp"
                             android:background="@drawable/bnt_profile"
                             android:text="PASSWORD"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintBottom_toBottomOf="@+id/btn_changeemail"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.68" />
+                            app:layout_constraintTop_toTopOf="@+id/btn_changeemail" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
@@ -345,7 +345,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/layout_border"
-                    android:text="Validate" />
+                    android:text="@string/validate" />
 
                 <TextView
                     android:id="@+id/txt_developedby"
