--- a/app/src/main/res/layout/layout_toolbar_secondary.xml
+++ b/app/src/main/res/layout/layout_toolbar_secondary.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            android:text="TextView"
+            android:text="Manolo Lama"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/toolbar_secondary_image_my_profile"
