--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,9 +29,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000000"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:tabTextColor="@color/white"
-        tools:layout_editor_absoluteX="-2dp" />
+        app:tabTextColor="@color/white" />
 
     <SearchView
         android:id="@+id/searchView"
