--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/edit_event_constraint_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/event_add"
+    android:id="@+id/edit_event_constraint_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <include
         android:id="@+id/toolbar"
@@ -33,30 +32,28 @@
     <EditText
         android:id="@+id/title_text"
         android:layout_width="345dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/title_text"
         android:inputType="textPersonName"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />
 
     <EditText
         android:id="@+id/where_text"
-        android:layout_width="349dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="345dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/where_text"
         android:inputType="textPersonName"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
@@ -64,12 +61,11 @@
         android:id="@+id/button_day"
         android:layout_width="120dp"
         android:layout_height="55dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_button_shape"
         android:text="@string/button_select_day"
-        android:background="@drawable/btn_event_time"
-        android:textColor="@drawable/btn_letr"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toStartOf="@+id/button_hour"
-        app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/where_text" />
 
@@ -77,51 +73,50 @@
         android:id="@+id/button_hour"
         android:layout_width="120dp"
         android:layout_height="55dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
-        android:background="@drawable/btn_event_time"
-        android:textColor="@drawable/btn_letr"
+        android:background="@drawable/rounded_button_shape"
         android:text="@string/button_select_hour"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/button_day"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/where_text" />
+        app:layout_constraintStart_toEndOf="@+id/button_day"
+        app:layout_constraintTop_toTopOf="@+id/button_day" />
 
     <EditText
         android:id="@+id/description_text"
-        android:layout_width="338dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="345dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="15dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/description_text"
         android:inputType="textPersonName"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_day" />
 
     <Button
         android:id="@+id/button_image"
-        android:layout_width="140dp"
-        android:layout_height="66dp"
+        android:layout_width="120dp"
+        android:layout_height="55dp"
         android:layout_marginStart="224dp"
         android:layout_marginLeft="224dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/btn_event_button"
+        android:background="@drawable/rounded_button_shape"
         android:text="@string/button_add_image"
-        android:textColor="@color/white"
+        android:textColor="@android:color/black"
         android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_selector"
+        app:layout_constraintEnd_toEndOf="@+id/description_text"
         app:layout_constraintStart_toStartOf="@+id/image_selector"
-        app:layout_constraintTop_toBottomOf="@+id/description_text" />
+        app:layout_constraintTop_toTopOf="@+id/image_selector" />
 
     <Button
         android:id="@+id/edit_event_activity_edit_event_button"
         android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_event_button"
+        android:layout_height="55dp"
+        android:background="@drawable/rounded_button_shape"
         android:text="@string/button_edit_event"
-        android:textColor="@color/white"
+        android:textColor="@android:color/black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -138,6 +133,6 @@
         app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_text"
-        app:srcCompat="@drawable/event_add" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
