--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -101,7 +101,7 @@
                             android:id="@+id/tv4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Josep Pedrerol"
+                            android:text="Pol Yin"
                             android:textSize="25sp"
                             android:textStyle="bold" />
 
