--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -7,66 +7,73 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/eventsSwipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/cardsContainer"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <edu.ub.sportshub.widgets.EventView
-                android:id="@+id/cardView"
+            <LinearLayout
+                android:id="@+id/eventsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true">
+                android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/eventView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@color/pink" />
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/tv1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Nike F.C"
-                            android:textSize="25sp"
-                            android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/tv2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginBottom="15dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas imperdiet vel nunc id dignissim. In quis tortor sit..." />
+                            android:src="@color/pink" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/tv1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Nike F.C"
+                                android:textSize="25sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/tv2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="10dp"
+                                android:layout_marginBottom="15dp"
+                                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas imperdiet vel nunc id dignissim. In quis tortor sit..." />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
-                </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-            </edu.ub.sportshub.widgets.EventView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </ScrollView>
 
-    </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 
