--- a/app/src/main/res/layout/event_view.xml
+++ b/app/src/main/res/layout/event_view.xml
@@ -13,7 +13,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/eventImage"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_marginRight="10dp"
