Event page backend done

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -131,6 +131,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:tint="@color/colorPrimaryDark"
+            android:visibility="gone"
             app:backgroundTint="@color/colorPrimary"
             app:layout_anchor="@id/collapsableEventPicture"
             app:layout_anchorGravity="bottom|right|end"
@@ -306,6 +307,8 @@
                     android:id="@+id/addressTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:text="08914, El toro, Badalona"
                     android:textColor="#808080"
                     app:layout_constraintBottom_toBottomOf="@+id/addressIcon"
