Event description error hotfix

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -77,7 +77,7 @@
                             android:shadowDx="2"
                             android:shadowDy="2"
                             android:shadowRadius="5"
-                            android:text="223.6k"
+                            android:text="{event.likes}"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
                             android:textSize="24dp"
@@ -107,7 +107,7 @@
                             android:shadowDx="2"
                             android:shadowDy="2"
                             android:shadowRadius="5"
-                            android:text="8.2k"
+                            android:text="{event.assists}"
                             android:textAllCaps="false"
                             android:textColor="@android:color/white"
                             android:textSize="24dp"
@@ -157,7 +157,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="Nike F.C."
+                    android:text="{event.title}"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -169,7 +169,7 @@
                     android:id="@+id/hourTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="16:14 PM"
+                    android:text="{event.hour}"
                     android:textColor="#FF717171"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -195,7 +195,7 @@
                     android:id="@+id/dateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="16/04/2020"
+                    android:text="{event.date}"
                     android:textColor="#FF717171"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -283,7 +283,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas imperdiet vel nunc id dignissim. In quis tortor sit amet metus commodo suscipit. Sed vitae ante neque. Praesent rutrum libero vel eros fermentum, nec sollicitudin nulla mollis. Cras scelerisque nunc vitae neque aliquam varius. Vivamus maximus sagittis libero porta ultricies. Nam tincidunt quis dolor eu interdum. Nulla facilisi. Donec sit amet finibus est. Proin auctor maximus augue eu imperdiet. Donec lobortis gravida ultricies. Praesent accumsan lorem sem, id dignissim tortor feugiat non. Morbi elit augue, eleifend et lorem at, placerat placerat libero. Curabitur viverra turpis ac gravida vestibulum. Nam orci diam, accumsan ut convallis vel, faucibus ut urna. Morbi quis porta urna."
+                    android:text="{description}"
                     android:textColor="#808080"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -309,7 +309,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:text="08914, El toro, Badalona"
+                    android:text="{event.address}"
                     android:textColor="#808080"
                     app:layout_constraintBottom_toBottomOf="@+id/addressIcon"
                     app:layout_constraintStart_toEndOf="@+id/addressIcon"
