--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/where_text"
         android:layout_width="345dp"
         android:layout_height="40dp"
